# semantic-uplink-rpi5

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
collector/: analyze.py  collector.py  store_sqlite.py
common/: __init__.py  discord_webhook.py  metrics.py  mqttutil.py  quantize.py  schema.py  timeutil.py
configs/: device.yaml  link_profiles.yaml  policy.yaml
docs/figma/: README.md
docs/specs/: architecture.md
edge/: __init__.py  edge_daemon.py
edge/policy/: linucb.py
edge/predict/: ar1_rls.py  ewma.py
edge/rtc/: __init__.py  ds3231.py
edge/sensors/: mic_rms.py  temp.py
edge/ui/: lcd.py
edge/uploader/: mqtt_publisher.py  outbox.py
experiments/: run_scenarios.py
infra/mosquitto/: mosquitto.conf
link/shaper/: __init__.py  tc_profiles.py
models/: README.md
scripts/: apply_profile.sh  health_check.sh  start_collector.sh  start_edge.sh
tests/: conftest.py  test_ds3231.py
tests/integration/: test_end_to_end_placeholder.py
tests/unit/: test_discord_webhook.py  test_linucb.py  test_outbox.py  test_quantize.py
